src/lpn/parser/properties/PropertyParser.java
// $ANTLR 3.5 /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g 2016-09-01 11:02:46

  package lpn.parser.properties;
  //import lpn.parser.LhpnFile;
  //package antlrPackage;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class PropertyParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALWAYS", "AND", "ASSERT", "ASSERT_STABLE", 
		"ASSERT_UNTIL", "BOOLEAN", "COMMA", "COMMENT", "DASH", "DIV", "ELSE", 
		"ELSEIF", "END", "EQUAL", "ESC_SEQ", "EXPONENT", "FLOAT", "GET", "GETEQ", 
		"HEX_DIGIT", "ID", "IF", "INT", "INTEGER", "LCURL", "LET", "LETEQ", "LPARA", 
		"MINUS", "MOD", "MULT", "NOT", "NOT_EQUAL", "OCTAL_ESC", "OR", "PLUS", 
		"RCURL", "REAL", "RPARA", "SAMEAS", "SEMICOL", "SENALWAYS", "STRING", 
		"UNICODE_ESC", "UNIFORM", "WAIT", "WAIT_DELAY", "WAIT_POSEDGE", "WAIT_STABLE", 
		"WS", "'property'"
	};
	public static final int EOF=-1;
	public static final int T__54=54;
	public static final int ALWAYS=4;
	public static final int AND=5;
	public static final int ASSERT=6;
	public static final int ASSERT_STABLE=7;
	public static final int ASSERT_UNTIL=8;
	public static final int BOOLEAN=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int DASH=12;
	public static final int DIV=13;
	public static final int ELSE=14;
	public static final int ELSEIF=15;
	public static final int END=16;
	public static final int EQUAL=17;
	public static final int ESC_SEQ=18;
	public static final int EXPONENT=19;
	public static final int FLOAT=20;
	public static final int GET=21;
	public static final int GETEQ=22;
	public static final int HEX_DIGIT=23;
	public static final int ID=24;
	public static final int IF=25;
	public static final int INT=26;
	public static final int INTEGER=27;
	public static final int LCURL=28;
	public static final int LET=29;
	public static final int LETEQ=30;
	public static final int LPARA=31;
	public static final int MINUS=32;
	public static final int MOD=33;
	public static final int MULT=34;
	public static final int NOT=35;
	public static final int NOT_EQUAL=36;
	public static final int OCTAL_ESC=37;
	public static final int OR=38;
	public static final int PLUS=39;
	public static final int RCURL=40;
	public static final int REAL=41;
	public static final int RPARA=42;
	public static final int SAMEAS=43;
	public static final int SEMICOL=44;
	public static final int SENALWAYS=45;
	public static final int STRING=46;
	public static final int UNICODE_ESC=47;
	public static final int UNIFORM=48;
	public static final int WAIT=49;
	public static final int WAIT_DELAY=50;
	public static final int WAIT_POSEDGE=51;
	public static final int WAIT_STABLE=52;
	public static final int WS=53;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PropertyParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PropertyParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return PropertyParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g"; }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:24:1: program : property ;
	public final PropertyParser.program_return program() throws Exception  {
		PropertyParser.program_return retval = new PropertyParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope property1 =null;


		try {
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:25:2: ( property )
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:25:3: property
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_property_in_program61);
			property1=property();
			state._fsp--;

			adaptor.addChild(root_0, property1.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class property_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "property"
	// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:28:1: property : 'property' ^ ID LCURL ! ( declaration )* ( statement )* RCURL !;
	public final PropertyParser.property_return property() throws Exception  {
		PropertyParser.property_return retval = new PropertyParser.property_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal2=null;
		Token ID3=null;
		Token LCURL4=null;
		Token RCURL7=null;
		ParserRuleReturnScope declaration5 =null;
		ParserRuleReturnScope statement6 =null;

		CommonTree string_literal2_tree=null;
		CommonTree ID3_tree=null;
		CommonTree LCURL4_tree=null;
		CommonTree RCURL7_tree=null;

		try {
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:29:3: ( 'property' ^ ID LCURL ! ( declaration )* ( statement )* RCURL !)
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:29:3: 'property' ^ ID LCURL ! ( declaration )* ( statement )* RCURL !
			{
			root_0 = (CommonTree)adaptor.nil();


			string_literal2=(Token)match(input,54,FOLLOW_54_in_property72); 
			string_literal2_tree = (CommonTree)adaptor.create(string_literal2);
			root_0 = (CommonTree)adaptor.becomeRoot(string_literal2_tree, root_0);

			ID3=(Token)match(input,ID,FOLLOW_ID_in_property75); 
			ID3_tree = (CommonTree)adaptor.create(ID3);
			adaptor.addChild(root_0, ID3_tree);

			LCURL4=(Token)match(input,LCURL,FOLLOW_LCURL_in_property77); 
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:29:25: ( declaration )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==BOOLEAN||LA1_0==INTEGER||LA1_0==REAL) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:29:26: declaration
					{
					pushFollow(FOLLOW_declaration_in_property81);
					declaration5=declaration();
					state._fsp--;

					adaptor.addChild(root_0, declaration5.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:29:40: ( statement )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==ALWAYS||(LA2_0 >= ASSERT && LA2_0 <= ASSERT_UNTIL)||LA2_0==IF||LA2_0==SENALWAYS||(LA2_0 >= WAIT && LA2_0 <= WAIT_STABLE)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:29:41: statement
					{
					pushFollow(FOLLOW_statement_in_property86);
					statement6=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement6.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			RCURL7=(Token)match(input,RCURL,FOLLOW_RCURL_in_property90); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "property"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:32:1: declaration : ( BOOLEAN ^ ID ( COMMA ! ID )* SEMICOL !| REAL ^ ID ( COMMA ! ID )* SEMICOL !| INTEGER ^ ID ( COMMA ! ID )* SEMICOL !);
	public final PropertyParser.declaration_return declaration() throws Exception  {
		PropertyParser.declaration_return retval = new PropertyParser.declaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token BOOLEAN8=null;
		Token ID9=null;
		Token COMMA10=null;
		Token ID11=null;
		Token SEMICOL12=null;
		Token REAL13=null;
		Token ID14=null;
		Token COMMA15=null;
		Token ID16=null;
		Token SEMICOL17=null;
		Token INTEGER18=null;
		Token ID19=null;
		Token COMMA20=null;
		Token ID21=null;
		Token SEMICOL22=null;

		CommonTree BOOLEAN8_tree=null;
		CommonTree ID9_tree=null;
		CommonTree COMMA10_tree=null;
		CommonTree ID11_tree=null;
		CommonTree SEMICOL12_tree=null;
		CommonTree REAL13_tree=null;
		CommonTree ID14_tree=null;
		CommonTree COMMA15_tree=null;
		CommonTree ID16_tree=null;
		CommonTree SEMICOL17_tree=null;
		CommonTree INTEGER18_tree=null;
		CommonTree ID19_tree=null;
		CommonTree COMMA20_tree=null;
		CommonTree ID21_tree=null;
		CommonTree SEMICOL22_tree=null;

		try {
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:33:3: ( BOOLEAN ^ ID ( COMMA ! ID )* SEMICOL !| REAL ^ ID ( COMMA ! ID )* SEMICOL !| INTEGER ^ ID ( COMMA ! ID )* SEMICOL !)
			int alt6=3;
			switch ( input.LA(1) ) {
			case BOOLEAN:
				{
				alt6=1;
				}
				break;
			case REAL:
				{
				alt6=2;
				}
				break;
			case INTEGER:
				{
				alt6=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:33:4: BOOLEAN ^ ID ( COMMA ! ID )* SEMICOL !
					{
					root_0 = (CommonTree)adaptor.nil();


					BOOLEAN8=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_declaration102); 
					BOOLEAN8_tree = (CommonTree)adaptor.create(BOOLEAN8);
					root_0 = (CommonTree)adaptor.becomeRoot(BOOLEAN8_tree, root_0);

					ID9=(Token)match(input,ID,FOLLOW_ID_in_declaration105); 
					ID9_tree = (CommonTree)adaptor.create(ID9);
					adaptor.addChild(root_0, ID9_tree);

					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:33:16: ( COMMA ! ID )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==COMMA) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:33:17: COMMA ! ID
							{
							COMMA10=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration108); 
							ID11=(Token)match(input,ID,FOLLOW_ID_in_declaration111); 
							ID11_tree = (CommonTree)adaptor.create(ID11);
							adaptor.addChild(root_0, ID11_tree);

							}
							break;

						default :
							break loop3;
						}
					}

					SEMICOL12=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration115); 
					}
					break;
				case 2 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:34:5: REAL ^ ID ( COMMA ! ID )* SEMICOL !
					{
					root_0 = (CommonTree)adaptor.nil();


					REAL13=(Token)match(input,REAL,FOLLOW_REAL_in_declaration122); 
					REAL13_tree = (CommonTree)adaptor.create(REAL13);
					root_0 = (CommonTree)adaptor.becomeRoot(REAL13_tree, root_0);

					ID14=(Token)match(input,ID,FOLLOW_ID_in_declaration125); 
					ID14_tree = (CommonTree)adaptor.create(ID14);
					adaptor.addChild(root_0, ID14_tree);

					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:34:14: ( COMMA ! ID )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==COMMA) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:34:15: COMMA ! ID
							{
							COMMA15=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration128); 
							ID16=(Token)match(input,ID,FOLLOW_ID_in_declaration131); 
							ID16_tree = (CommonTree)adaptor.create(ID16);
							adaptor.addChild(root_0, ID16_tree);

							}
							break;

						default :
							break loop4;
						}
					}

					SEMICOL17=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration135); 
					}
					break;
				case 3 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:35:5: INTEGER ^ ID ( COMMA ! ID )* SEMICOL !
					{
					root_0 = (CommonTree)adaptor.nil();


					INTEGER18=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_declaration142); 
					INTEGER18_tree = (CommonTree)adaptor.create(INTEGER18);
					root_0 = (CommonTree)adaptor.becomeRoot(INTEGER18_tree, root_0);

					ID19=(Token)match(input,ID,FOLLOW_ID_in_declaration145); 
					ID19_tree = (CommonTree)adaptor.create(ID19);
					adaptor.addChild(root_0, ID19_tree);

					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:35:17: ( COMMA ! ID )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==COMMA) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:35:18: COMMA ! ID
							{
							COMMA20=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration148); 
							ID21=(Token)match(input,ID,FOLLOW_ID_in_declaration151); 
							ID21_tree = (CommonTree)adaptor.create(ID21);
							adaptor.addChild(root_0, ID21_tree);

							}
							break;

						default :
							break loop5;
						}
					}

					SEMICOL22=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_declaration155); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class booleanNegationExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "booleanNegationExpression"
	// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:266:1: booleanNegationExpression : ( NOT ^)* constantValue ;
	public final PropertyParser.booleanNegationExpression_return booleanNegationExpression() throws Exception  {
		PropertyParser.booleanNegationExpression_return retval = new PropertyParser.booleanNegationExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token NOT23=null;
		ParserRuleReturnScope constantValue24 =null;

		CommonTree NOT23_tree=null;

		try {
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:267:3: ( ( NOT ^)* constantValue )
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:267:3: ( NOT ^)* constantValue
			{
			root_0 = (CommonTree)adaptor.nil();


			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:267:3: ( NOT ^)*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==NOT) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:267:4: NOT ^
					{
					NOT23=(Token)match(input,NOT,FOLLOW_NOT_in_booleanNegationExpression1052); 
					NOT23_tree = (CommonTree)adaptor.create(NOT23);
					root_0 = (CommonTree)adaptor.becomeRoot(NOT23_tree, root_0);

					}
					break;

				default :
					break loop7;
				}
			}

			pushFollow(FOLLOW_constantValue_in_booleanNegationExpression1057);
			constantValue24=constantValue();
			state._fsp--;

			adaptor.addChild(root_0, constantValue24.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "booleanNegationExpression"


	public static class always_statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "always_statement"
	// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:271:1: always_statement : ALWAYS ^ LCURL ! ( statement )* RCURL !;
	public final PropertyParser.always_statement_return always_statement() throws Exception  {
		PropertyParser.always_statement_return retval = new PropertyParser.always_statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ALWAYS25=null;
		Token LCURL26=null;
		Token RCURL28=null;
		ParserRuleReturnScope statement27 =null;

		CommonTree ALWAYS25_tree=null;
		CommonTree LCURL26_tree=null;
		CommonTree RCURL28_tree=null;

		try {
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:272:3: ( ALWAYS ^ LCURL ! ( statement )* RCURL !)
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:272:5: ALWAYS ^ LCURL ! ( statement )* RCURL !
			{
			root_0 = (CommonTree)adaptor.nil();


			ALWAYS25=(Token)match(input,ALWAYS,FOLLOW_ALWAYS_in_always_statement1071); 
			ALWAYS25_tree = (CommonTree)adaptor.create(ALWAYS25);
			root_0 = (CommonTree)adaptor.becomeRoot(ALWAYS25_tree, root_0);

			LCURL26=(Token)match(input,LCURL,FOLLOW_LCURL_in_always_statement1074); 
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:272:20: ( statement )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==ALWAYS||(LA8_0 >= ASSERT && LA8_0 <= ASSERT_UNTIL)||LA8_0==IF||LA8_0==SENALWAYS||(LA8_0 >= WAIT && LA8_0 <= WAIT_STABLE)) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:272:21: statement
					{
					pushFollow(FOLLOW_statement_in_always_statement1078);
					statement27=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement27.getTree());

					}
					break;

				default :
					break loop8;
				}
			}

			RCURL28=(Token)match(input,RCURL,FOLLOW_RCURL_in_always_statement1082); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "always_statement"


	public static class senalways_statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "senalways_statement"
	// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:275:1: senalways_statement : SENALWAYS ^ ( sensitivityList )? LCURL ! ( statement )* RCURL !;
	public final PropertyParser.senalways_statement_return senalways_statement() throws Exception  {
		PropertyParser.senalways_statement_return retval = new PropertyParser.senalways_statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token SENALWAYS29=null;
		Token LCURL31=null;
		Token RCURL33=null;
		ParserRuleReturnScope sensitivityList30 =null;
		ParserRuleReturnScope statement32 =null;

		CommonTree SENALWAYS29_tree=null;
		CommonTree LCURL31_tree=null;
		CommonTree RCURL33_tree=null;

		try {
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:276:3: ( SENALWAYS ^ ( sensitivityList )? LCURL ! ( statement )* RCURL !)
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:276:5: SENALWAYS ^ ( sensitivityList )? LCURL ! ( statement )* RCURL !
			{
			root_0 = (CommonTree)adaptor.nil();


			SENALWAYS29=(Token)match(input,SENALWAYS,FOLLOW_SENALWAYS_in_senalways_statement1098); 
			SENALWAYS29_tree = (CommonTree)adaptor.create(SENALWAYS29);
			root_0 = (CommonTree)adaptor.becomeRoot(SENALWAYS29_tree, root_0);

			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:276:16: ( sensitivityList )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==LPARA) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:276:17: sensitivityList
					{
					pushFollow(FOLLOW_sensitivityList_in_senalways_statement1102);
					sensitivityList30=sensitivityList();
					state._fsp--;

					adaptor.addChild(root_0, sensitivityList30.getTree());

					}
					break;

			}

			LCURL31=(Token)match(input,LCURL,FOLLOW_LCURL_in_senalways_statement1106); 
			// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:276:42: ( statement )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==ALWAYS||(LA10_0 >= ASSERT && LA10_0 <= ASSERT_UNTIL)||LA10_0==IF||LA10_0==SENALWAYS||(LA10_0 >= WAIT && LA10_0 <= WAIT_STABLE)) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// /Users/myers/research/nobackup/workspace/BioSim/gui/src/lpn/parser/properties/Property.g:276:43: statement
					{
					pushFollow(FOLLOW_statement_in_senalways_statement1110);
					statement32=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement32.getTree());

					}
					break;

				default :
					break loop10;
				}
			}

			RCURL33=(Token)match(input,RCURL,FOLLOW_RCURL_in_senalways_statement1114); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "senalways_statement"

